[package]
name = "sketchlib"
version = "0.2.2"
authors = [
    "John Lees <jlees@ebi.ac.uk>",
    "Nicholas Croucher <n.croucher@imperial.ac.uk>",
    "Johanna von Wachsmann <wachsmannj@ebi.ac.uk>",
    "Victor Rodriguez Bouza <vrbouza@ebi.ac.uk>",
    "Joel Hellewell <joel@ebi.ac.uk",
]
edition = "2021"
description = "Genome and amino-acid sketching"
repository = "https://github.com/bacpop/sketchlib.rust"
homepage = "https://bacpop.org/software/"
license = "Apache-2.0"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/NOTICE",
    "/src",
    "/python_mini3di",
    "/tests"
]
keywords = ["bioinformatics", "genomics", "sequencing", "k-mer", "sketch"]
categories = ["command-line-utilities", "science"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
3di = ["dep:pyo3", "dep:pyo3-build-config"]

[dependencies]
# data structures
hashbrown = { version = "0.14", features = ["rayon", "serde"] }
ahash = ">=0.8.7"
roaring = { version = "0.10", features = ["serde"] }
# ordered-float = "4.2"
# save/load
needletail = { version = "0.5", features = ["compression"] }
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
rmp-serde = "1.3"
snap = "1.1"
memmap2 = "0.9"
arrayref = "0.3"
num-traits = "0.2"
# ffi
pyo3 = { version = "0.21", features = ["auto-initialize"], optional = true }
# logging
log = "0.4"
simple_logger = { version = "4", features = ["stderr"] }
indicatif = { version = "0.17", features = ["rayon", "improved_unicode"]}
# cli
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
# parallelisation
rayon = "1.8"
num_cpus = "1.0"

[build-dependencies]
pyo3-build-config = {version = "0.22", optional = true}

[dev-dependencies]
# testing
snapbox = "0.6.21"
predicates = "2.1.5"
assert_fs = "1.0.10"
pretty_assertions = "1.3.0"
tempfile = "3.19"

[profile.release]
lto = true
